apps/base/web/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  annotations:
    reloader.stakater.com/auto: 'true'
  labels:
    app: web
    version: v1
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: web
      version: v1
  template:
    metadata:
      labels:
        app: web
        version: v1
    spec:
      securityContext:
        fsGroup: 1001
      volumes:
        - name: next-data
          persistentVolumeClaim:
            claimName: next-data-pvc
      containers:
        - name: web
          image: ghcr.io/harrytang/web:latest # will be replaced based on environment
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          securityContext:
            runAsUser: 1001
            runAsGroup: 1001
          volumeMounts:
            - name: next-data
              mountPath: /app/.next
          resources:
            requests:
              memory: '128Mi'
              cpu: '1m'
            limits:
              memory: '256Mi'
              cpu: '500m'
